@@ -1,3 +1,8 @@
+2012-06-11 Miguel de Dios  <miguel.dedios@artica.es>
+	
+	* pandora_server/util/pandora_xml_stress.pl: cleaned source code
+	style.
+
 2012-06-08 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Fixed an error counting 
